# PyRo-FOAMS

./: pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: ci.yml
main/: __init__.py  __main__.py  postprocessing_gui.py  preprocessing.py  preprocessinggui.py  processing.py  processing_gui.py  stereology.py  stereology_gui.py
main/core/: __init__.py  batch.py  preprocessing.py  processing.py  stereology.py
main/gui/: __init__.py  postprocessing.py  preprocessing.py  processing.py  stereology.py  widgets.py
main/tests/: test_batch.py  test_edge_cases.py  test_preprocessing.py  test_processing.py  test_stereology.py  test_widgets.py
main/unitTest/: test_batch.py  test_preprocessing.py  test_processing.py  test_stereology.py  test_widgets.py
pyro_foams.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
